--- a/src/sass/entertainment_style.sass
+++ b/src/sass/entertainment_style.sass
@@ -17,6 +17,9 @@
         position: relative
         width: 100%
         height: 555px
+        .tab_menu
+            .selected
+                background-color: $main_orange
         .tab
             width: 100%
             height: 100%
@@ -164,24 +167,27 @@
             height: 15px
 
 @media (min-width: 1651px) 
-    .tab
-        img
-            width: 600px
-            height: 380px
-            top: 10%
-            left: 20%
-        .tab_descr
-            left: 42%
-            top: 60%
-            width: 400px
-    .tab_menu
-        left: 73%
-        left: 70%
-        top: 10%
-        flex-direction: column
-        .tab_menu_button
-            width: 15px
-            height: 15px
+    .entertainment_block
+        margin-bottom: 150px
+        .tabs_wrapper
+            .tab
+                img
+                    width: 600px
+                    height: 380px
+                    top: 10%
+                    left: 20%
+                .tab_descr
+                    left: 42%
+                    top: 60%
+                    width: 400px
+            .tab_menu
+                left: 73%
+                left: 70%
+                top: 10%
+                flex-direction: column
+                .tab_menu_button
+                    width: 15px
+                    height: 15px
 
 
 .not_displayed
@@ -193,7 +199,7 @@
         margin: 10px
         border-radius: 50%
         border: solid
-        border-color: black
+        border-color: lightgrey
         cursor: pointer
         border-width: 1px
     .tab_menu_button:hover
