--- a/src/sass/style_variables.sass
+++ b/src/sass/style_variables.sass
@@ -4,4 +4,5 @@ $dark_blue: rgb(44, 47, 120)
 $main_orange: rgb(212, 112, 19)
 $main_darkgrey: rgb(230, 230, 230)
 $main_block_shadow: 0px 6px 10px 6px rgba(150, 150, 150, .5)
+$main_img_shadow: 6px 5px 18px 5px rgba(150, 150, 150, .5)
 $bold_font_color: rgb(30, 30, 30)
