--- a/src/sass/arch_style.sass
+++ b/src/sass/arch_style.sass
@@ -20,6 +20,7 @@
                     margin-top: 10px
                     width: 50px
                     height: 50px
+                    box-shadow: $main_img_shadow
     
 @media (min-width: 431px)
     .arch_block
@@ -81,6 +82,7 @@
     display: flex
     .arch_ex
         margin: 0 10px 0 10px
+
 
 img.arrow
     width: 30px
