--- a/src/sass/entertainment_style.sass
+++ b/src/sass/entertainment_style.sass
@@ -1,12 +1,25 @@
 @import "style_variables.sass"
 
+@keyframes appearance
+    from
+        opacity: 0%
+    to
+        opacity: 100%
+
+@keyframes tab_menu_to_orange
+    from
+        background-color: none
+    to
+        background-color: $main_orange
+
 .entertainment_block
+    font-size: 2.1rem
     max-width: 80%
     margin: 80px auto 0 auto
     h2
         text-align: center
     .entertainment_intro
-        margin: 50px auto 0 auto
+        margin: 60px auto 0 auto
         padding: 0 15px 0 15px
         text-align: center
         line-height: 1.7
@@ -24,9 +37,11 @@
             width: 100%
             height: 100%
             position: relative
+            animation: appearance 1.5s forwards
             img
                 position: absolute
                 object-fit: cover
+                box-shadow: $main_img_shadow
             .tab_descr
                 padding: 10px
                 position: absolute
@@ -34,6 +49,9 @@
                 background-color: rgba(255, 255, 255, 0.9)
                 border-radius: 5px
                 font-size: 1.4rem
+                .tab_descr_header
+                    font-weight: 600
+
 
 @media (min-width: 431px)
     .entertainment_block
@@ -172,23 +190,22 @@
         .tabs_wrapper
             .tab
                 img
-                    width: 600px
-                    height: 380px
+                    width: 750px
+                    height: 440px
                     top: 10%
-                    left: 20%
+                    left: 15%
                 .tab_descr
-                    left: 42%
-                    top: 60%
-                    width: 400px
+                    left: 48%
+                    top: 70%
+                    width: 450px
+                    font-size: 1.6rem
             .tab_menu
-                left: 73%
-                left: 70%
-                top: 10%
+                left: 78%
+                top: 12%
                 flex-direction: column
                 .tab_menu_button
-                    width: 15px
-                    height: 15px
-
+                    width: 20px
+                    height: 20px
 
 .not_displayed
     display: none
@@ -203,4 +220,4 @@
         cursor: pointer
         border-width: 1px
     .tab_menu_button:hover
-        background-color: $main_orange
+        animation: tab_menu_to_orange 1s forwards
