--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -5,6 +5,7 @@
 @import "arch_style.sass"
 @import "entertainment_style.sass"
 @import "recommendations_style.sass"
+@import "footer_style.sass"
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap')
 
 @media (min-width: 1px) and (max-width: 430px)
