rec script amended (2)

--- a/src/sass/recommendations_style.sass
+++ b/src/sass/recommendations_style.sass
@@ -161,6 +161,9 @@
     display: block
     animation: block_appearing 1.5s forwards
 
+.rec_element_fading
+    animation: disappearing 1.5s forwards
+
 @media (min-width: 1px) and (max-width: 430px)
     .recommendations_block
         max-width: 90%
