--- a/src/sass/footer_style.sass
+++ b/src/sass/footer_style.sass
@@ -1,6 +1,8 @@
 @import "style_variables.sass"
 
 footer
+    margin: 0 auto
     max-width: 90%
-    height: 400px
+    border-radius: 5px 5px 0 0 
+    height: 200px
     background-color: rgb(181, 181, 181)
