--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -6,6 +6,7 @@
 @import "entertainment_style.sass"
 @import "recommendations_style.sass"
 @import "footer_style.sass"
+@import "day_of_city.sass"
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap')
 
 @media (min-width: 1px) and (max-width: 430px)
