--- a/src/sass/footer_style.sass
+++ b/src/sass/footer_style.sass
@@ -1,7 +1,7 @@
 @import "style_variables.sass"
 
 footer
-    margin: 0 auto
+    margin: 70px auto 0 auto
     max-width: 90%
     border-radius: 5px 5px 0 0 
     height: 200px
