--- a/src/css/footer_style.css
+++ b/src/css/footer_style.css
@@ -1,1 +1,1 @@
-footer{margin:0 auto;max-width:90%;border-radius:5px 5px 0 0;height:200px;background-color:#b5b5b5}
+footer{margin:70px auto 0 auto;max-width:90%;border-radius:5px 5px 0 0;height:200px;background-color:#b5b5b5}
