--- a/src/sass/day_of_city.sass
+++ b/src/sass/day_of_city.sass
@@ -1,33 +1,93 @@
 @import "style_variables.sass"
 
+
 .city_day_block
-    margin: 0 auto
+    margin: 90px auto 0 auto
     h2
         text-align: center
     div
         text-align: center
     .bd_slider_container
+        margin: 70px auto 0 auto
+        padding: 0 40px 0 40px
+        border-radius: 10px 10px 0 0 
+        background-color: white
         display: grid
-        grid-template-columns: 0.3fr 0.7fr
+        grid-template-columns: 0.4fr 0.6fr
+        .bd_slider_text
+            display: flex
+            justify-content: space-around
+            .bd_arrow_container
+                position: relative
+                img
+                    width: 80px
+                    height: 80px
+                    object-fit: cover
+                    display: block
+                    margin-top: 10%
+                    position: absolute 
+                    top: 50%
+                    left: 50%
+                    transform: translate(-50%, -50%)
+            .bd_arrow_text
+                position: relative
+                p
+                    margin: 0
+                    width: 300px
+                    position: absolute 
+                    top: 50%
+                    left: 50%
+                    transform: translate(-50%, -50%)
+                    
         .bd_slider_block
-            .bd_slider_window
-                width: 200px 
-                height: 50px
-                background-color: coral
-            .bd_slider_tape 
-                width: 190px
-                height: 50px
-                background-color: lightblue
-                border-radius: 25px
-                display: flex
-                .bd_slider_handle
-                    width: 50px
+            position: relative
+            width: 100%
+            height: 200px
+            .slider_wrapper
+                position: absolute
+                top: 50%
+                left: 50%
+                transform: translate(-50%, -50%)
+                .bd_slider_window
+                    margin: 0 auto
+                    width: 200px 
                     height: 50px
-                    background-color: yellow
+                    background-color: $main_lightgrey
+                    border: solid
+                    border-color: $main_orange
                     border-radius: 25px
-                
+                    overflow: hidden
+                    position: relative
+                    .bd_slider_tape 
+                        width: 200px
+                        height: 55px
+                        background-color: $main_blue
+                        border-radius: 25px
+                        display: flex
+                        position: absolute
+                        left: 150px
+                        .bd_slider_handle
+                            width: 55px
+                            height: 55px
+                            background-color: $main_orange
+                            border-radius: 50%
+                        .bd_slider_handle:hover
+                            cursor: pointer
+    .bd_counter_container
+        border: solid
+        border-width: 8px
+        border-color: white
+        height: 100px
+        position: relative
+        p
+            margin: 0
+            display: block
+            position: absolute
+            top: 50%
+            left: 50%
+            transform: translate(-50%, -50%)
     .bd_info_container
-        margin-top: 70px
+        margin-top: 0px
         display: grid
         gap: 15px
         grid-template-columns: 0.5fr 0.5fr
@@ -91,6 +151,7 @@
                 grid-column-start: 1
                 grid-column-end: 8
                 background-color: red
+
 
 @media (min-width: 1px) and (max-width: 430px)
 
