--- a/src/sass/day_of_city.sass
+++ b/src/sass/day_of_city.sass
@@ -9,14 +9,18 @@
         text-align: center
     .bd_slider_container
         margin: 70px auto 0 auto
-        padding: 0 40px 0 40px
         border-radius: 10px 10px 0 0 
         background-color: white
         display: grid
-        grid-template-columns: 0.4fr 0.6fr
+        grid-template-rows: 0.5fr 0.5fr
         .bd_slider_text
-            display: flex
-            justify-content: space-around
+            width: 70%
+            margin: 0 auto
+            display: grid
+            grid-template-columns: 0.2fr 0.8fr
+            grid-row-start: 2
+            grid-row-end: 3
+            min-height: 100px
             .bd_arrow_container
                 position: relative
                 img
@@ -24,7 +28,6 @@
                     height: 80px
                     object-fit: cover
                     display: block
-                    margin-top: 10%
                     position: absolute 
                     top: 50%
                     left: 50%
@@ -32,17 +35,16 @@
             .bd_arrow_text
                 position: relative
                 p
+                    width: 100%
                     margin: 0
-                    width: 300px
                     position: absolute 
                     top: 50%
                     left: 50%
-                    transform: translate(-50%, -50%)
-                    
+                    transform: translate(-50%, -50%)           
         .bd_slider_block
             position: relative
             width: 100%
-            height: 200px
+            height: 100px
             .slider_wrapper
                 position: absolute
                 top: 50%
@@ -61,6 +63,7 @@
                     .bd_slider_tape 
                         width: 200px
                         height: 55px
+                        color: white
                         background-color: $main_blue
                         border-radius: 25px
                         display: flex
@@ -89,11 +92,11 @@
             transform: translate(-50%, -50%)
             transition-duration: 0.5s
     .bd_info_container
-        margin-top: 0px
+        margin: 0 0 0 4px
+        padding-bottom: 10px
         height: 0
         display: grid
         gap: 15px
-        grid-template-columns: 0.5fr 0.5fr
         transition-duration: 1s
         .bd_celebration_info
             display: none
@@ -106,6 +109,8 @@
             transition-duration: 2s
         .bd_history_steps
             overflow: hidden
+            padding-bottom: 5px
+            min-height: 300px
             display: grid
             gap: 8px
             grid-template-columns: repeat(12, 1fr)
@@ -113,14 +118,18 @@
             .step_container
                 width: 100%
                 height: 100%
+                margin-bottom: 2px
                 display: flex
                 justify-content: space-between
+                border-bottom: solid
+                border-color: $main_orange
                 font-size: 1.5rem
-                transform: translateX(-100%)
+                transform: translateX(-101%)
                 transition-duration: 2s
                 .step_year
                     width: 120px
-                    background-color: white
+                    background-color: $main_blue
+                    color: white
                     position: relative
                     p
                         margin: 0 auto
@@ -132,6 +141,7 @@
                 .step_text
                     width: 100%
                     position: relative
+                    background-color: white
                     p
                         width: 95%
                         position: absolute
@@ -142,40 +152,94 @@
             .step_1
                 grid-column-start: 1
                 grid-column-end: 13
-                background-color: lightyellow
                 
             .step_2
                 grid-column-start: 1
                 grid-column-end: 12
-                background-color: lightgreen
             .step_3
                 grid-column-start: 1
                 grid-column-end: 11
-                background-color: lightblue
-                
             .step_4
                 grid-column-start: 1
                 grid-column-end: 10
-                background-color: lightgreen
-                
             .step_5
                 grid-column-start: 1
                 grid-column-end: 9
-                background-color: lightyellow
-
-                
 
 
 @media (min-width: 1px) and (max-width: 430px)
+    .city_day_block
+        max-width: 80%
+        .bd_slider_container
+            padding: 0 10px 0 10px
+            grid-template-rows: 0.5fr 0.5fr
+            .bd_slider_text
+                .bd_arrow_container
+                    img
+                        width: 40px
+                        height: 40px
+                .bd_arrow_text
+                    p
+                        font-size: 1rem
 
+        .bd_info_container
+            grid-template-rows: 0.5fr 0.5fr
+            .bd_celebration_info
+                font-size: 1.5rem
+                grid-row-start: 3
+                grid-row-end: 2
+            .bd_history_steps
+                grid-row-start: 2
+                grid-row-end: 1
 @media (min-width: 431px) and (max-width: 768px)
-
+    .city_day_block
+        max-width: 80%
+        .bd_slider_container
+            grid-template-rows: 0.5fr 0.5fr
+            max-width: 100%
+        .bd_info_container
+            grid-template-rows: 0.5fr 0.5fr
+            .bd_celebration_info
+                font-size: 1.6rem
+                grid-row-start: 3
+                grid-row-end: 2
+            .bd_history_steps
+                grid-row-start: 2
+                grid-row-end: 1
 @media (min-width: 769px) and (max-width: 1149px)
-
+    .city_day_block
+        max-width: 80%
+        .bd_slider_container
+            padding: 0 40px 0 40px
+        .bd_info_container
+            grid-template-columns: 0.5fr 0.5fr
+            .bd_celebration_info
+                font-size: 1.5rem
 @media (min-width: 1150px) and (max-width: 1400px)
-
+    .city_day_block
+        max-width: 80%
+        .bd_slider_container
+            padding: 0 40px 0 40px
+        .bd_info_container
+            grid-template-columns: 0.5fr 0.5fr
+            .bd_celebration_info
+                font-size: 1.7rem
 @media (min-width: 1401px) and (max-width: 1650px)
-
+    .city_day_block
+        max-width: 80%
+        .bd_slider_container
+            padding: 0 40px 0 40px
+        .bd_info_container
+            grid-template-columns: 0.5fr 0.5fr
+            .bd_celebration_info
+                font-size: 1.9rem
 @media (min-width: 1651px)
     .city_day_block
         max-width: 80%
+        .bd_slider_container
+            padding: 0 40px 0 40px
+        .bd_info_container
+            grid-template-columns: 0.5fr 0.5fr
+        
+
+            
